main, navbar, css effects

--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
     <title>kaaskip10</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="nav-links">
+                <img src="assets/favicon.png" alt="logo">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="main">
-        <h2>kaaskip10</h2>
-        <p>ik doe dingen die mij interesseren.</p>
+        <div id="home" class="item">
+            <h2>kaaskip10</h2>
+            <p>This is supposedly a website where i go and talk about what i do and stuff.</p>
+        </div>
+        <div id="about" class="item">
+            <h2>why a chicken</h2>
+            <p>chickens are the coolest fucking creatures alive and you cannot convince me otherwise.</p>
+        </div>
+        <div id="contact" class="item">
+            <button onclick="window.open('mailto:kaaskip10@outlook.com')">Send Me An E-Mail</button>
+        </div>
     </div>
 </body>
 </html>
