--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="The great chicken's den.">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css">
     <title>kaaskip10</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
                 <img src="assets/favicon.png" alt="logo">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -22,14 +24,33 @@
 
     <div class="main">
         <div id="home" class="item">
-            <h2>kaaskip10</h2>
+            <div class="header-container">
+                <a href="#home"><i class="fa-solid fa-house"></i></a>
+                <h2>kaaskip10</h2>
+            </div>
             <p>This is supposedly a website where i go and talk about what i do and stuff.</p>
         </div>
         <div id="about" class="item">
-            <h2>why a chicken</h2>
-            <p>chickens are the coolest fucking creatures alive and you cannot convince me otherwise.</p>
+            <div class="header-container">
+                <a href="#about"><i class="fa-solid fa-house"></i></a>
+                <h2>About Me</h2>
+            </div>
+            <p>chickens are the coolest creatures alive and you cannot convince me otherwise.</p>
+        </div>
+        <div id="projects" class="item">
+            <div class="header-container">
+                <a href="#projects"><i class="fa-solid fa-house"></i></a>
+                <h2>Projects</h2>
+            </div>
+            <p>Currently, i have nothing here.</p>
+            <p>If you have an idea, feel free to send it to me! <em>The contact section is right there!</em></p>
         </div>
         <div id="contact" class="item">
+            <div class="header-container">
+                <a href="#contact"><i class="fa-solid fa-house"></i></a>
+                <h2>Contact</h2>
+            </div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum neque ea blanditiis!</p>
             <button onclick="window.open('mailto:kaaskip10@outlook.com')">Send Me An E-Mail</button>
         </div>
     </div>
