spiced up text, and navbar changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul class="nav-links">
-                <img src="assets/favicon.png" alt="logo">
+                <img src="assets/favicon.png" alt="logo" onclick="window.open('https://github.com/kaaskip10')">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -28,18 +28,18 @@
                 <a href="#home"><i class="fa-solid fa-house"></i></a>
                 <h2>kaaskip10</h2>
             </div>
-            <p>This is supposedly a website where i go and talk about what i do and stuff.</p>
+            <p>I program stuff, i mostly use HTML, CSS and Javascript, as well as Python and C#.</p>
         </div>
         <div id="about" class="item">
             <div class="header-container">
-                <a href="#about"><i class="fa-solid fa-house"></i></a>
-                <h2>About Me</h2>
+                <a href="#about"><i class="fa-solid fa-circle-question"></i></a>
+                <h2>About Me, or better yet: Why a chicken?</h2>
             </div>
-            <p>chickens are the coolest creatures alive and you cannot convince me otherwise.</p>
+            <p>Chickens are the coolest living creatures alive and you cannot convince me otherwise.</p>
         </div>
         <div id="projects" class="item">
             <div class="header-container">
-                <a href="#projects"><i class="fa-solid fa-house"></i></a>
+                <a href="#projects"><i class="fa-solid fa-memo-circle-info"></i></a>
                 <h2>Projects</h2>
             </div>
             <p>Currently, i have nothing here.</p>
@@ -47,11 +47,12 @@
         </div>
         <div id="contact" class="item">
             <div class="header-container">
-                <a href="#contact"><i class="fa-solid fa-house"></i></a>
+                <a href="#contact"><i class="fa-solid fa-phone-rotary"></i></a>
                 <h2>Contact</h2>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum neque ea blanditiis!</p>
-            <button onclick="window.open('mailto:kaaskip10@outlook.com')">Send Me An E-Mail</button>
+            <p>If you have any ideas, feedback, or just anything else programming related, contact met at <strong>kaaskip10@outlook.com</strong>.</p>
+            <p>You can also find me on <a href="https://github.com/kaaskip10">Github</a>.</p>
+            <button onclick="window.open('mailto:kaaskip10@outlook.com')">send me an email</button>
         </div>
     </div>
 </body>
