--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#about"><i class="fa-solid fa-circle-question"></i></a>
                 <h2>About Me, or better yet: Why a chicken?</h2>
             </div>
-            <p>Chickens are the coolest living creatures alive and you cannot convince me otherwise.</p>
+            <p>Chickens are the coolest living creatures alive and you cannot convince me otherwise. I also am currently learning the martial art Taekwondo.</p>
         </div>
         <div id="projects" class="item">
             <div class="header-container">
@@ -52,7 +52,6 @@
                 <h2>Contact</h2>
             </div>
             <p>If you have any ideas, feedback, or just anything else programming related, contact met at <strong>kaaskip10@outlook.com</strong>.</p>
-            <p>You can also find me on <a href="https://github.com/kaaskip10">Github</a>.</p>
             <button onclick="window.open('mailto:kaaskip10@outlook.com')">send me an email</button>
         </div>
     </div>
