--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#about"><i class="fa-solid fa-circle-question"></i></a>
                 <h2>About Me, or better yet: Why a chicken?</h2>
             </div>
-            <p>Chickens are the coolest living creatures alive and you cannot convince me otherwise. I also am currently learning the martial art Taekwondo.</p>
+            <p>Chickens are the coolest living creatures alive and you cannot convince me otherwise.I started my coding journey in 2019.</p>
         </div>
         <div id="projects" class="item">
             <div class="header-container">
